@@ -1218,6 +1218,15 @@
     </version>
   </module>
   <module name="gnome-keyring-manager">
+    <version release="gnome-2.10">
+      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="extras">
+        <podir dir="po"/>
+	<potname name="gnome-keyring-manager.pot"/>
+	<branch name="gnome-2-10"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
     <version release="HEAD">
       <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="extras">
 	<podir dir="po"/>
