@@ -1,3 +1,7 @@
+2005-03-25  Adam Weinberger  <adamw@gnome.org>
+
+	* translation-status.xml: gnome-keyring-manager has branched.
+
 2005-03-24  Adam Weinberger  <adamw@gnome.org>
 
 	* translation-status.xml: libbonoboui has been branched.
